--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'java-library'
     id 'maven-publish'
     id 'checkstyle'
+    id 'jacoco'
+    id 'org.sonarqube' version '3.5.0.2730'
 }
 
 repositories {
@@ -18,6 +20,8 @@ dependencies {
     api 'org.apache.maven.plugins:maven-checkstyle-plugin:3.2.1'
     api 'com.puppycrawl.tools:checkstyle:10.6.0'
     api 'com.thomasjensen.checkstyle.addons:checkstyle-addons:7.0.1'
+    implementation 'org.jacoco:jacoco-maven-plugin:0.8.8'
+    implementation 'org.apache.maven.plugins:maven-surefire-plugin:2.22.2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test:3.0.1'
 }
 
@@ -68,3 +72,44 @@ checkstyleMain {
 checkstyleTest {
     source ='src/test/java'
 }
+
+jacoco {
+    reportsDirectory = file("$buildDir/jacoco")
+}
+
+jacocoTestReport {
+    reports {
+        csv.enabled true
+        xml.enabled true
+        html.enabled true
+    }
+    dependsOn test
+}
+
+test {
+    useJUnitPlatform()
+    finalizedBy jacocoTestReport
+    finalizedBy jacocoTestCoverageVerification
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
+}
+
+//jacocoTestCoverageVerification {
+//    violationRules {
+//        rule {
+//            element = 'CLASS'
+//            limit {
+//                minimum = 1
+//            }
+//            excludes = ['*Test']
+//        }
+//        rule {
+//            limit {
+//                counter = 'LINE'
+//                value = 'COVEREDRATIO'
+//                minimum = 0.25
+//            }
+//        }
+//    }
+//}
