--- a/.github/workflows/.travis.yml
+++ b/.github/workflows/.travis.yml
@@ -1,13 +1,14 @@
 language: java
 
-#cache:
-#  directories:
-#  - $home/.m2
+cache:
+  directories:
+  - $home/.m2
 
-./mvnw clean install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+#./mvnw clean install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+#./gradlew assemble
 
 #./mvnw test -B
-
+#./gradlew check
 
 
 # addons:
@@ -34,3 +35,10 @@ language: java
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
+
+notifications:
+  email:
+    recipients:
+      - schnieder_v_s@mail.ru
+    on_success: always # default: change
+    on_failure: always # default: always
