--- a/pom.xml
+++ b/pom.xml
@@ -110,7 +110,7 @@
                 <configuration>
                     <configLocation>config\checkstyle\checkstyle.xml</configLocation>
                     <propertyExpansion>config_loc=${basedir}\config\checkstyle</propertyExpansion>
-                    <suppressionsLocation>${project.basedir}\config\checkstyle\checkstyle-suppressions.xml</suppressionsLocation>
+                    <suppressionsLocation>${project.basedir}/config/checkstyle/checkstyle-suppressions.xml</suppressionsLocation>
                     <consoleOutput>true</consoleOutput>
                     <inputEncoding>UTF-8</inputEncoding>
                     <outputEncoding>UTF-8</outputEncoding>
