--- a/pom.xml
+++ b/pom.xml
@@ -108,8 +108,8 @@
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>3.2.1</version>
                 <configuration>
-                    <configLocation>config\checkstyle\checkstyle.xml</configLocation>
-                    <propertyExpansion>config_loc=${basedir}\config\checkstyle</propertyExpansion>
+                    <configLocation>config/checkstyle/checkstyle.xml</configLocation>
+                    <propertyExpansion>config_loc=${basedir}/config/checkstyle</propertyExpansion>
                     <suppressionsLocation>${project.basedir}/config/checkstyle/checkstyle-suppressions.xml</suppressionsLocation>
                     <consoleOutput>true</consoleOutput>
                     <inputEncoding>UTF-8</inputEncoding>
